--- a/main.html
+++ b/main.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+		<div>
+			My current favourite song is<a href="https://www.youtube.com/watch?v=ZAp3xJ7GsY8">
+				click here </a>
+		</div>
+	
 </body>
 
 </html>
